--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,15 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  if error
+    p Error getting dynamic content.
+  else
+    p The inventory has the following record counts:
+
+    ul
+      li #[Strong Succulents:] #{data.succulent_count}
+      li #[Strong Succulents in our Catalog:] #{data.succulent_instance_count}
+      li #[Strong Succulents available now:] #{data.succulent_instance_available_count}
+      li #[Strong Succulent Types:] #{data.planttype_count}
+      li #[Strong Succulent Categories:] #{data.category_count}
