--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,39 @@
 doctype html
-html
+html(lang='en')
   head
+    meta(charset='utf-8')
     title= title
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    div(class='container-fluid')
+      div(class='row')
+        div(class='col-sm-2')
+          block sidebar
+            ul(class='sidebar-nav')
+              li
+                a(href="/catalog") Home
+              li
+                a(href="/catalog/succulents") Succulent Catalog
+              li
+                a(href="/catalog/types") All Plant Types
+              li
+                a(href="/catalog/categories") All Categories
+              li
+                a(href="/catalog/inventory") Succulent Inventory
+              li
+                hr
+              li
+                a(href="/catalog/succulent/create") Create new succulent
+              li
+                a(href="/catalog/type/create") Create new plant type
+              li
+                a(href="/catalog/category/create") Create new category
+              li
+                a(href="/catalog/inventory/create") Add to inventory
+
+        div(class='col-sm-10')
+          block content
