Implement succulent delete handling

--- a/views/succulent_detail.pug
+++ b/views/succulent_detail.pug
@@ -13,3 +13,9 @@ block content
           |, 
   p #[strong Category:] 
     a(href=succulent.category.url) #{succulent.category.name}
+
+  hr
+  p
+    a(href=succulent.url + '/update') Update Succulent Information
+  p
+    a(href=succulent.url + '/delete') Delete Succulent
