--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -5,7 +5,13 @@ block content
 
   form(action="" method="POST")
     div.form-group 
-      label(for="category") New Category:
-      input#category.form-control(type="text", placeholder="New Category Name" required)
+      label(for="name") New Category:
+      input#name.form-control(type="text", placeholder="New Category Name" name="name" value=(category === undefined ? '' : category.name) required )
 
     button.btn.btn-primary(type="submit") Submit
+  
+
+  if errors
+    ul
+      for error in errors
+        li!= error.msg
