Implement category delete handling

--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -4,3 +4,9 @@ block content
  h1= title
 
  p #{detail.name}
+
+ hr
+ p
+  a(href=detail.url + '/update') Update Category Information
+ p
+   a(href=detail.url + '/delete') Delete Category
