Implement plant type delete handling

--- a/views/type_detail.pug
+++ b/views/type_detail.pug
@@ -1,6 +1,12 @@
 extends layout
 
 block content
- h1= title
+  h1= title
 
- p #{detail.name}
+  p #{detail.name}
+
+  hr
+  p 
+    a(href=detail.url + '/update') Update Plant Type Information
+  p
+    a(href=detail.url + '/delete') Delete Plant Type
