--- a/views/type_form.pug
+++ b/views/type_form.pug
@@ -6,6 +6,11 @@ block content
   form(action="" method="POST")
     div.form-group 
       label(for="plant-type") New Plant Type:
-      input#plant-type.form-control(type="text", placeholder="New type Name" required)
+      input#plant-type.form-control(type="text", placeholder="New type Name" name="name" required value=(detail === undefined ? '' : detail.name))
 
     button.btn.btn-primary(type="submit") Submit
+
+  if errors 
+    ul
+      for error in errors
+        li!= error.msg
