--- a/views/succulent_form.pug
+++ b/views/succulent_form.pug
@@ -6,13 +6,16 @@ block content
   form(action="" method="POST")
     div.form-group
       label(for="name") Name:
-      input#name.form-control(type="text", placeholder="Name of Succulent" name="name" required=(succulent===undefined ? "" : succulent.name))
+      input#name.form-control(type="text", placeholder="Name of Succulent" name="name" required value=(succulent===undefined ? "" : succulent.name))
     div.form-group
       label(for="nickname") Also Known as:
-      input#nickname.form-control(type="text" placeholder="Nick Name (optional)" name="nickname")
+      input#nickname.form-control(type="text" placeholder="Nick Name (optional)" name="nickname" value=(succulent===undefined ? "" : succulent.nickname))
     div.form-group 
       label(for="summary") Summary:
-      textarea#summary.form-control(type="textarea", placeholder="Description of Succulent" name="summary" required)
+      textarea#summary.form-control(type="textarea", placeholder="Description of Succulent" name="summary" required) #{succulent===undefined ? "" : succulent.summary}
+    div.form-group
+      label(for="sku") SKU:
+      input#sku.form-control(type="text", placeholder="SKU" name="sku" value=(succulent===undefined ? "" : succulent.sku))
     div.form-group
       label Plant Type:
       div
@@ -20,15 +23,22 @@ block content
           div(style='display: inline; padding-right: 10px;')
             input.checkbox-input(type="checkbox" name="planttype" id=plantType._id value=plantType._id checked=plantType.checked)
             label(for=plantType._id) #{plantType.name}
+            
     div.form-group
       label(for="category") Category:
       select#category.form-control(type="select" placeholder="Select Category" name="category" required)
         for category in categories
-          option(value=category._id) #{category.name}
+          if succulent
+            option(
+              value=category._id
+              selected=(category._id.toString()==succulent.category._id.toString() || category._id.toString()==succulent.category) ? 'selected' : false
+              ) #{category.name}
+          else 
+            option(value=category._id) #{category.name}
 
     button.btn.btn-primary(type='submit') Submit
 
-    if errors
-      ul
-        for error in errors
-          li!= error.msg
+  if errors
+    ul
+      for error in errors
+        li!= error.msg
