--- a/views/type_detail.pug
+++ b/views/type_detail.pug
@@ -3,10 +3,10 @@ extends layout
 block content
   h1= title
 
-  p #{detail.name}
+  p #{type.name}
 
   hr
   p 
-    a(href=detail.url + '/update') Update Plant Type Information
+    a(href=type.url + '/update') Update Plant Type Information
   p
-    a(href=detail.url + '/delete') Delete Plant Type
+    a(href=type.url + '/delete') Delete Plant Type
