--- a/views/type_form.pug
+++ b/views/type_form.pug
@@ -5,8 +5,8 @@ block content
 
   form(action="" method="POST")
     div.form-group 
-      label(for="plant-type") New Plant Type:
-      input#plant-type.form-control(type="text", placeholder="New type Name" name="name" required value=(detail === undefined ? '' : detail.name))
+      label(for="plant-type") #{title}:
+      input#plant-type.form-control(type="text", placeholder="New plant type name" name="name" required value=(type === undefined ? '' : type.name))
 
     button.btn.btn-primary(type="submit") Submit
 
